--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,15 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #cc1616;
-  width: 40px;
+  background-color: #cc1616;
   height: 40px;
   transition: all 0.4s;
+  padding: 1.6rem 2rem;
+    font-size: 1.3rem;
+    font-weight: 700;
+    border-radius: 3rem;
 }
-.back-to-top i {
-  font-size: 28px;
+.back-to-top{
   color: #fff;
   line-height: 0;
 }
@@ -504,6 +506,10 @@ section {
   padding: 50px 30px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   transition: all ease-in-out 0.3s;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .why-us .box span {
   display: block;
