--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ h1, h2, h3, h4, h5, h6 {
   color: rgb(0, 0, 0);
 }
 #header .logo img {
-  max-height: 30px;
+  max-height: 44px;
 }
 
 .scrolled-offset {
@@ -532,6 +532,7 @@ section {
 }
 .why-us .box:hover {
   background: #cc1616;
+  color: white;
   padding: 30px 30px 70px 30px;
   box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
 }
